# toy

./: .gitignore  CMakeLists.txt  test.txt
include/Basic/: StringCopy.h
include/Debug/View/: ViewToken.h
include/Lex/: CodeReader.h  Lexer.h  LexerToken.h
include/Token/: Token.h  TokenBlock.h  TokenList.h
src/: CMakeLists.txt  EmptyFile.cpp  main.cpp
src/Basic/: CMakeLists.txt  StringCopy.cpp
src/Debug/: CMakeLists.txt  EmptyFile.cpp
src/Debug/View/: CMakeLists.txt  ViewToken.cpp
src/Lex/: CMakeLists.txt  CodeReader.cpp  Lexer.cpp  LexerToken.cpp
src/Token/: CMakeLists.txt  Token.cpp  TokenBlock.cpp  TokenList.cpp
test/: CMakeLists.txt
test/Lex/: CMakeLists.txt  LexTest.cpp  test.txt
